--- a/website/users/templates/login.html
+++ b/website/users/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
+    <div class="content-section mt-5">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
@@ -9,7 +9,7 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Войти</button>
+                <button class="btn btn-outline-primary" type="submit">Войти</button>
             </div>
         </form>
         <div class="border-top pt-3">
