--- a/website/artists/templates/artists/artist_detail.html
+++ b/website/artists/templates/artists/artist_detail.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-  <div class="container">
+  <div class="container-fluid mb-5">
+  <nav aria-label="breadcrumb" style="background-color: transparent !important;">
+                <ol class="breadcrumb" style="background-color: transparent !important;">
+                    <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                    <li class="breadcrumb-item active"><a href="#" class="active">{{ object.nickname }}</a></li>
+                </ol>
+            </nav>
+  </div>
+  <div class="container mt-5">
     <div class="row d-flex justify-content-center">
       <div>
-        <span>{{ object.name }}</span>
-        <button type="button" class="btn btn-primary ml-2" data-toggle="modal" data-target="#userAgreement">
-          Подписаться
-        </button>
+        <h1 class="h1 text-white d-block mb-6">{{ object.name }}</h1>
 
-        <div class="modal fade" id="userAgreement" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="uA" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Подписаться на {{ object.name }}</h5>
+            <h5 class="modal-title text-white" id="exampleModalLabel">Подписаться на {{ object.name }}</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -25,7 +30,7 @@
                   {{ u_form|crispy }}
                 </fieldset>
                 <div class="form-group">
-                    <button class="btn btn-outline-info" type="submit">Подтвердить</button>
+                    <button class="btn btn-outline-primary" type="submit">Подтвердить</button>
                 </div>
             </form>
           </div>
@@ -39,4 +44,176 @@
 
     </div>
   </div>
+
+  <div class="container">
+    <div class="row">
+
+        <div class="col-md-8">
+
+            <div class="accordion" id="accordionExample">
+                <div class="card" style="border-radius: 0px;">
+                    <div class="card-header" id="headingOne" style="background-color: #0077E5">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                                    aria-expanded="true" aria-controls="collapseOne"
+                                    style="color: white;">
+                                Краткая информация
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne "
+                         data-parent="#accordionExample">
+                        <div class="card-body">
+                            <p>{{ object.shortBio }}</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="card" style="border-radius: 0px;">
+                    <div class="card-header" id="headingTwo" style="color: white; background-color: #0077E5">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"
+                                    style="color: white;">
+                                Биография
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                        <div class="card-body">
+                            <p>{{ object.bio }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="accordion" id="accordionExamples">
+
+                <div class="card" style="border-radius: 0px;">
+                    <div class="card-header" id="headingFour" style="color: white; background-color: #0077E5">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"
+                                    style="color: white;">
+                                Треки
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingTwo"
+                         data-parent="#accordionExample">
+                        <div class="card-body">
+                            <ul class="book-list">
+                              {% for track in tracks  %}
+                                <li class="book-item">
+                                    <h3 class="book-title">{{ track.name }}</h3><p class="book-description"><strong>«{{track.name}}»</strong> — {{ track.description }} </p>
+                                </li>
+                                <li class="book-item">{{ track.duration }}</li>
+                                <li class="book-item">{{ track.release_date }}</li>
+                              {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <div class="accordion" id="accordionExamples">
+
+                <div class="card" style="border-radius: 0px;">
+                    <div class="card-header" id="headingFour" style="color: white; background-color: #0077E5">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                    data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour"
+                                    style="color: white;">
+                                Альбомы
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingTwo"
+                         data-parent="#accordionExample">
+                        <div class="card-body">
+                            <ul class="book-list">
+                              {% for album in albums  %}
+                                <li class="book-item">
+                                    <h3 class="book-title">{{ album.name }}</h3><p class="book-description"><strong>«{{album.name}}»</strong> — {{ album.description }} </p>
+                                </li>
+                                <li class="book-item">{{ album.release_date }}</li>
+                              {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div id="carouselExampleIndicators" class="carousel slide mt-6" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{ object.image }}" class="d-block w-100, img-car" alt="Carousel Image 1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ object.image }}" class="d-block w-100, img-car" alt="Carousel Image 2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ object.image }}" class="d-block w-100, img-car" alt="Carousel Image 3">
+                    </div>
+                </div>
+
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+
+            </div>
+
+        </div>
+
+
+
+        <div class="col-md-4">
+
+          <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#uA">
+            Подписаться
+        </button>
+
+
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #0077E5">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link text-white" href="#">Автор <span class="sr-only">(текущая)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Главная</a>
+                        </li>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+
+            <div class="scrollable-block" style="background-color: white">
+                <p style="background-color: white; word-break: break-all; padding: 25px">{{ object.shortBio }}</p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 {% endblock %}
