--- a/website/artists/templates/index.html
+++ b/website/artists/templates/index.html
@@ -1,30 +1,26 @@
 {% extends 'base.html' %}
 {% block content %}
-{#  {{ artists }}#}
-  <div class="vote">
-    <a class="nav-link" href="{% url 'polls:questions' %}">Проголосовать</a>
-  </div>
-
-  <h1 class="mb-5 mt-3">Артисты:</h1>
-
+  <h1 class="mb-3 mt-3 h1 text-white">Артисты</h1>
+  <a class="btn btn-primary mb-5 mt-2" href="{% url 'polls:questions' %}">Участвовать в жизни артистов</a>
   <div class="artists-block">
     {% for artist in artists  %}
-{#        {{ artist. }}#}
-      <div class="card mb-3" style="max-width: 680px;">
-          <div class="row g-0">
-            <div class="col-md-6">
-              <img style="background-size: cover" src="{{ artist.image.url }}" class="img-fluid rounded-start" alt="Artist Image">
-            </div>
-            <div class="col-md-6">
-              <div class="card-body">
-                <h5 class="card-title mb-0">{{ artist.nickname }}</h5>
-                <span class="card-text">{{ artist.name }} {{ artist.surname }}</span>
-                <p class="card-text mt-3">{{ artist.shortBio }}</p>
-                <a href="{% url 'artists:artist_detail' artist.id artist.nickname %}" class="btn btn-primary">Подробнее</a>
+      <div class="home-blog-post-card">
+            <img alt="image" src="{{ artist.image.url }}" class="home-image"/>
+            <div class="home-container1">
+              <h1 class="text-white">{{ artist.nickname }}</h1>
+              <span class="home-text1" style="word-break: break-all; color: lightgray;">{{ artist.shortBio }}</span>
+              <div class="home-container2">
+                <div class="home-profile">
+                  <img alt="profile" src="{{ artist.image.url }}" class="home-image1"/>
+                  <span class="home-text2" style="color: lightgray;">{{ artist.name }} {{ artist.surname }}</span>
+                </div>
+                <a href="{% url 'artists:artist_detail' artist.id artist.nickname %}"><span class="home-text3" style="color: lightgray;"> Узнать больше -&gt;</span></a>
               </div>
             </div>
           </div>
-      </div>
     {% endfor %}
   </div>
+
+
+
 {% endblock %}
