--- a/website/polls/templates/polls/questions.html
+++ b/website/polls/templates/polls/questions.html
@@ -5,7 +5,7 @@
             <div class="container">
                 <div class="main-body">
                     <div class="row">
-                        <div class="col-lg-8">
+                        <div class="col-md-12">
                             <div class="card p-3 h-100 card-soft-primary">
                                 <div class="profile-card-body">
                                     <div class="row mb-3">
