--- a/website/users/templates/logout.html
+++ b/website/users/templates/logout.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>Вы вышли из своей учетной записи</h2>
+  <div>
+    <h2 class="h2 text-white">Вы вышли из своей учетной записи</h2>
     <div class="border-top pt-3">
         <small class="text-muted">
             <a href="{% url 'users:login' %}">Войти</a>
         </small>
     </div>
+  </div>
 {% endblock content %}
