--- a/website/artists/static/css/index.css
+++ b/website/artists/static/css/index.css
@@ -22446,6 +22446,6 @@ iframe.yt-video.loaded {
 
 
 /*# sourceMappingURL=theme.css.map */
-label, legend {
-  color: white !important;
-}
+/*label, legend {*/
+/*  color: white !important;*/
+/*}*/
